# klib-x86

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: build.yml
klib/: dynamic_array.cpp  math.cpp  queue.cpp  ringbuffer.cpp  string.cpp  units.cpp  vector2.cpp  vector3.cpp
klib/crypt/: base32.cpp
klib/io/: rtc.cpp
